--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "deepest-walk": "^0.1.0",
     "min-quote": "*",
     "n-gram-counter": "*",
-    "separo": "^0.0.2"
+    "separo": "^0.0.2",
+    "striptags": "^3.1.1",
+    "var-names": "*"
   },
   "devDependencies": {
-    "flug": "^0.0.0",
-    "striptags": "^3.1.1",
-    "var-names": "^0.0.0"
+    "flug": "^0.0.0"
   }
 }
